# ggml-gemmini

./: CMakeLists.txt  ggml-gemmini-tensor.cpp  ggml-gemmini-tensor.h  ggml-gemmini-util.h  ggml-gemmini.cpp
